# engine-server

./: .gitignore  README.md  pyproject.toml  server.py
core/: main.py
core/flows/: inference.py
core/models/: avatar.py
core/routers/: inference.py
core/sse/: worker.py
core/tasks/: forward.py  preprocess.py  wakeup.py
core/unet/: server.py  worker.py
core/unet/tools/: helpers.py  log.py
core/vae/: worker.py
core/workers/avatar/: worker.py
core/workers/unet/: worker.py
core/workers/vae/: worker.py
core/workers/whisper/: worker.py
core/workers/whisper/model/: audio.py
scripts/: model_registry.py
tests/: test_unet.py
