[project]
name = "engine-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers[torch]>=0.30.3",
    "httpx-sse>=0.4.0",
    "litserve>=0.2.4",
    "mosec>=0.8.8",
    "msgpack>=1.1.0",
    "numpy>=2.1.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "torch>=2.5.1",
    "wandb>=0.18.5",
]

[tool.uv]
dev-dependencies = [
    "aiohttp>=3.10.10",
]
